// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-sort-control #render Not sorted 1`] = `
<gux-sort-control>
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="gux-container">
      <button class="gux-sort-button" type="button" aria-label="Column Header 1 . The table is not currently sorted by this column. Click the column header to sort the table by this column in ascending order">
        <gux-icon class="gux-sort-icon" size="small" icon-name="fa/caret-up-solid" decorative="">
        </gux-icon>
      </button>
      <div class="gux-resize-spacer">
      </div>
    </div>
  </template>
</gux-sort-control>
`;

exports[`gux-sort-control #render Sorted ascending 1`] = `
<gux-sort-control>
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="gux-container gux-active">
      <button class="gux-sort-button" type="button" aria-label="Column Header 1 . The table is currently sorted by this column in ascending order. Click the column header to sort the table by this column in descending order">
        <gux-icon class="gux-sort-icon" size="small" icon-name="fa/caret-up-solid" decorative="">
        </gux-icon>
      </button>
      <div class="gux-resize-spacer">
      </div>
    </div>
  </template>
</gux-sort-control>
`;

exports[`gux-sort-control #render Sorted descending 1`] = `
<gux-sort-control>
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="gux-container gux-active">
      <button class="gux-sort-button" type="button" aria-label="Column Header 1 . The table is currently sorted by this column in descending order. Click the column header to sort the table by this column in ascending order">
        <gux-icon class="gux-sort-icon" size="small" icon-name="fa/caret-down-solid" decorative="">
        </gux-icon>
      </button>
      <div class="gux-resize-spacer">
      </div>
    </div>
  </template>
</gux-sort-control>
`;

exports[`gux-sort-control #render Sorted descending, unsorted allowed 1`] = `
<gux-sort-control include-unsorted="">
  <template shadowrootmode="open" shadowrootdelegatesfocus>
    <div class="gux-container gux-active">
      <button class="gux-sort-button" type="button" aria-label="Column Header 1 . The table is currently sorted by this column in descending order. Click the column header to not sort the table by this column">
        <gux-icon class="gux-sort-icon" size="small" icon-name="fa/caret-down-solid" decorative="">
        </gux-icon>
      </button>
      <div class="gux-resize-spacer">
      </div>
    </div>
  </template>
</gux-sort-control>
`;
